# Alexander-CodeWorks

./: README.md
KayakAlgorithmsTests/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  KayakTest.cpp  KukaAlgorithms.cpp  KukaAlgorithms.h  Makefile  Quaternion.cpp  Quaternion.h  RoboticsDynamics.h  hls_helper.cpp  hls_helper.h  main.cpp
KayakAlgorithmsTests/Utils/: CLIInter.h  CLIWindow.cpp  CLIWindow.h  Frame.cpp  Frame.h  GeometryUtils.cpp  GeometryUtils.h  Joint.h  KyComDef.h  LogInter.h  LogPipe.cpp  LogPipe.h  LogWriter.cpp  LogWriter.h  Logger.cpp  Logger.h  MathUtil.h  Message.h  Point.h  Quaterniond.cpp  Quaterniond.h  Rotation.cpp  Rotation.h  UtilFunc.cpp  UtilFunc.h  Vector.cpp  Vector.h  XmlParser.cpp  XmlParser.h
